--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       </style>
    </body>
    <script>
-       
+       let listaAprovados = [
+           "Joao",
+           "Paulo",
+           "Vanessa"
+       ]
    </script>
-</html>
+</html> 
