--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    </body>
    <script>
        let listaAprovados = [
-           "Joao",
+           "Teste",
            "Paulo",
            "Vanessa"
        ]
